--- a/index.html
+++ b/index.html
@@ -469,40 +469,49 @@
             <p class="text-center comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                 praesentium</p>
             <div class="owl-carousel feedback">
-                <div class="row">
-                    <div class="col-md-2 col-md-offset-1"><img class="img-circle" src="images/testimonial_11.jpg"
-                                                               alt=""></div>
-                    <div class="col-md-8"><p class="f-16">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Atque aut cum dignissimos
-                        dolorum ea eius, enim et eveniet exercitationem iusto laboriosam magnam porro quia, quidem quod,
-                        reprehenderit saepe ut. Aliquam!<br> <br>
-                        <strong class="text-uppercase contrast-font">Partho</strong> <br>
-                        <span class="text-uppercase">FOUNDER, ARTWAYS BD</span>
-                    </p>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-2 col-md-offset-1"><img class="img-circle" src="images/testimonial_11.jpg"
+                                                                   alt=""></div>
+                        <div class="col-md-8"><p class="f-16">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Atque aut cum dignissimos
+                            dolorum ea eius, enim et eveniet exercitationem iusto laboriosam magnam porro quia, quidem
+                            quod,
+                            reprehenderit saepe ut. Aliquam!<br> <br>
+                            <strong class="text-uppercase contrast-font">Partho</strong> <br>
+                            <span class="text-uppercase">FOUNDER, ARTWAYS BD</span>
+                        </p>
+                        </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-2 col-md-offset-1"><img class="img-circle" src="images/testimonial_11.jpg"
-                                                               alt=""></div>
-                    <div class="col-md-8"><p class="f-16">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Atque aut cum dignissimos
-                        dolorum ea eius, enim et eveniet exercitationem iusto laboriosam magnam porro quia, quidem quod,
-                        reprehenderit saepe ut. Aliquam!<br> <br>
-                        <strong class="text-uppercase contrast-font">Partho</strong> <br>
-                        <span class="text-uppercase">FOUNDER, ARTWAYS BD</span>
-                    </p>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-2 col-md-offset-1"><img class="img-circle" src="images/testimonial_11.jpg"
+                                                                   alt=""></div>
+                        <div class="col-md-8"><p class="f-16">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Atque aut cum dignissimos
+                            dolorum ea eius, enim et eveniet exercitationem iusto laboriosam magnam porro quia, quidem
+                            quod,
+                            reprehenderit saepe ut. Aliquam!<br> <br>
+                            <strong class="text-uppercase contrast-font">Partho</strong> <br>
+                            <span class="text-uppercase">FOUNDER, ARTWAYS BD</span>
+                        </p>
+                        </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-2 col-md-offset-1"><img class="img-circle" src="images/testimonial_11.jpg"
-                                                               alt=""></div>
-                    <div class="col-md-8"><p class="f-16">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Atque aut cum dignissimos
-                        dolorum ea eius, enim et eveniet exercitationem iusto laboriosam magnam porro quia, quidem quod,
-                        reprehenderit saepe ut. Aliquam!<br> <br>
-                        <strong class="text-uppercase contrast-font">Partho</strong> <br>
-                        <span class="text-uppercase">FOUNDER, ARTWAYS BD</span>
-                    </p>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-2 col-md-offset-1"><img class="img-circle" src="images/testimonial_11.jpg"
+                                                                   alt=""></div>
+                        <div class="col-md-8"><p class="f-16">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Atque aut cum dignissimos
+                            dolorum ea eius, enim et eveniet exercitationem iusto laboriosam magnam porro quia, quidem
+                            quod,
+                            reprehenderit saepe ut. Aliquam!<br> <br>
+                            <strong class="text-uppercase contrast-font">Partho</strong> <br>
+                            <span class="text-uppercase">FOUNDER, ARTWAYS BD</span>
+                        </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -524,7 +533,8 @@
                     provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
                     fuga. Et harum quidem rerum facilis est et expedita distinctio...
                 </p>
-                <p id="collapse" class="hidden-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium atque cupiditate eaque eveniet
+                <p id="collapse" class="hidden-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Accusantium atque cupiditate eaque eveniet
                     facilis hic molestias necessitatibus nemo nisi nulla obcaecati placeat possimus, quasi quisquam
                     repellendus reprehenderit ut vel voluptate.</p>
                 <a href="#collapse" class="nav-toggle read_more">+ Read More</a>
@@ -554,9 +564,73 @@
 </section>
 <section class="price">
     <div class="container">
-        <h3 class="text-uppercase">Latest news</h3>
+        <h3 class="text-uppercase text-center">Our price</h3>
+        <p class="text-center comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+            praesentium</p>
+        <div class="d-flex j-content-center">
+            <div class="offer-price text-center">
+                <h4 class="text-uppercase">Premium</h4>
+                <span class="contrast-font">$60</span>
+                <p class="price-note">Per Month</p>
+                <div class="price-hover">
+                    <p class="text-left">Full Branding<br>
+                        Unlimited Revisions<br>
+                        24/7 h Service<br>
+                        Free Domain</p>
+                    <a href="#" class="text-center">Let's start ></a>
+                </div>
+            </div>
+            <div class="offer-price text-center">
+                <h4 class="text-uppercase">Standard</h4>
+                <span class="contrast-font">$50</span>
+                <p class="price-note">Per Month</p>
+                <div class="price-hover">
+                    <p class="text-left"> Project Management<br> Free Hostin</p>
+                    <a href="#" class="text-center">Let's start ></a>
+                </div>
+            </div>
+            <div class="offer-price text-center">
+                <h4 class="text-uppercase">Exclusive</h4>
+                <span class="contrast-font">$80</span>
+                <p class="price-note">Per Month</p>
+                <div class="price-hover">
+                    <p class="text-left">Full Branding<br>
+                        Project Management<br>
+                        Unlimited Revisions<br>
+                        24/7 h Service<br>
+                        Free Domain<br>
+                        Free Hosting</p>
+                    <a href="#" class="text-center">Let's start ></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="subscribe">
+    <div class="container text-center">
+        <h3 class="text-uppercase">subscribe us</h3>
         <p class="comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
             praesentium</p>
+        <form class="form-inline">
+            <div class="form-group">
+                <input type="email" class="form-control" placeholder="Email Address">
+            </div>
+            <button type="submit" class="btn btn-default text-uppercase">Submit</button>
+        </form>
+    </div>
+</section>
+<section class="contact" id="Contact">
+    <div class="our_contacts">
+    <div class="container text-center">
+        <h3 class="text-uppercase">Contact us</h3>
+        <p class="comment">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+            praesentium</p>
+        <div class="d-flex j-content-center">
+            <div class="contact-info"><img href="" alt=""> <p></p> </div>
+            <div class="contact-info"><img href="" alt=""> <p></p></div>
+            <div class="contact-info"><img href="" alt=""> <p></p></div>
+        </div>
+    </div>
     </div>
 </section>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
